--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ body {
     font-size: 1rem !important;
   }
   .about-me {
-    margin-bottom: 3rem;
+    margin-bottom: 3rem !important;
   }
   .about-me,
   .tech-stack-container {
@@ -218,7 +218,7 @@ body {
 }
 @media screen and (min-width: 375px) and (max-width: 508px) {
   .intro-talk {
-    font-size: 14px !important;
+    font-size: 16px !important;
     line-height: normal !important;
   }
   .my-role {
